# api/internal/application/router/daily.go
@@ -8,4 +8,5 @@ import (
 
 func RegisterDailyRoutes(router *gin.Engine, controller *controller.DailyController) {
 	router.GET("/daily", controller.GetToday)
+	router.GET("/daily/random-lines", controller.GetTodaysRandomLines)
 }
